[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/hud/game_hud.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/8-Bit Madness.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/hud/hud.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/fxs/Drop Metal Thing-SoundBible.com-401640954.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/fxs/Morphine - Loose Strings.wav" type="AudioStream" id=5]
[ext_resource path="res://ui/components/clock_timer.tscn" type="PackedScene" id=6]




[sub_resource type="GDScript" id=1]
script/source = "extends Position2D

var stack_id: int setget set_stack_id

func set_stack_id(value: int) -> void:
	stack_id = value"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/HBoxContainer/OrderPad:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.297302, 1, 2.92817 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.686275, 0.266667, 0.266667, 0.827451 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WrongRecipeSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Shows up the level's available coins, time to finish and orders to be delivered."
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 141.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 40
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 25.0
margin_right = 1000.0
margin_bottom = 116.0

[node name="OrderPad" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 856.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="CenterContainer1" type="CenterContainer" parent="MarginContainer/HBoxContainer/OrderPad"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer1"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
border_color = Color( 1, 0, 0, 0.392157 )

[node name="Reference" type="Node2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer1"]

[node name="Position2D" type="Position2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer1/Reference"]
position = Vector2( 0, -1 )
script = SubResource( 1 )

[node name="Tween" type="Tween" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer1/Reference"]

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/HBoxContainer/OrderPad"]
margin_left = 108.0
margin_right = 208.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer2"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
border_color = Color( 1, 0, 0, 0.392157 )

[node name="Reference" type="Node2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer2"]

[node name="Position2D" type="Position2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer2/Reference"]
position = Vector2( 0, -1 )
script = SubResource( 1 )

[node name="Tween" type="Tween" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer2/Reference"]

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/HBoxContainer/OrderPad"]
margin_left = 216.0
margin_right = 316.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer3"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
border_color = Color( 1, 0, 0, 0.392157 )

[node name="Reference" type="Node2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer3"]

[node name="Position2D" type="Position2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer3/Reference"]
position = Vector2( 0, -1 )
script = SubResource( 1 )

[node name="Tween" type="Tween" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer3/Reference"]

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/HBoxContainer/OrderPad"]
margin_left = 324.0
margin_right = 424.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer4"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
border_color = Color( 1, 0, 0, 0.392157 )

[node name="Reference" type="Node2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer4"]

[node name="Position2D" type="Position2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer4/Reference"]
position = Vector2( 0, -1 )
script = SubResource( 1 )

[node name="Tween" type="Tween" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer4/Reference"]

[node name="CenterContainer5" type="CenterContainer" parent="MarginContainer/HBoxContainer/OrderPad"]
margin_left = 432.0
margin_right = 532.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer5"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
border_color = Color( 1, 0, 0, 0.392157 )

[node name="Reference" type="Node2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer5"]

[node name="Position2D" type="Position2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer5/Reference"]
position = Vector2( 0, -1 )
script = SubResource( 1 )

[node name="Tween" type="Tween" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer5/Reference"]

[node name="CenterContainer6" type="CenterContainer" parent="MarginContainer/HBoxContainer/OrderPad"]
margin_left = 540.0
margin_right = 640.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer6"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
border_color = Color( 1, 0, 0, 0.392157 )

[node name="Reference" type="Node2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer6"]

[node name="Position2D" type="Position2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer6/Reference"]
position = Vector2( 0, -1 )
script = SubResource( 1 )

[node name="Tween" type="Tween" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer6/Reference"]

[node name="CenterContainer7" type="CenterContainer" parent="MarginContainer/HBoxContainer/OrderPad"]
margin_left = 648.0
margin_right = 748.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer7"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
border_color = Color( 1, 0, 0, 0.392157 )

[node name="Reference" type="Node2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer7"]

[node name="Position2D" type="Position2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer7/Reference"]
position = Vector2( 0, -1 )
script = SubResource( 1 )

[node name="Tween" type="Tween" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer7/Reference"]

[node name="CenterContainer8" type="CenterContainer" parent="MarginContainer/HBoxContainer/OrderPad"]
margin_left = 756.0
margin_right = 856.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer8"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )
border_color = Color( 1, 0, 0, 0.392157 )

[node name="Reference" type="Node2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer8"]

[node name="Position2D" type="Position2D" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer8/Reference"]
position = Vector2( 0, -1 )
script = SubResource( 1 )

[node name="Tween" type="Tween" parent="MarginContainer/HBoxContainer/OrderPad/CenterContainer8/Reference"]

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 860.0
margin_right = 960.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 0 )

[node name="Coins" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CenterContainer"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/CenterContainer/Coins"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 65.0
rect_min_size = Vector2( 58, 40 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.996078, 0.905882, 0.380392, 1 )
text = "0"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer/Coins"]
margin_left = 62.0
margin_right = 100.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 3 )
expand = true
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -91.0
margin_right = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_right = 135.0
margin_bottom = 91.0
custom_constants/margin_right = 35
custom_constants/margin_top = 0

[node name="Countdown" type="HBoxContainer" parent="CenterContainer/MarginContainer"]
margin_right = 100.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 91 )

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/Countdown"]
margin_top = 25.0
margin_right = 58.0
margin_bottom = 65.0
rect_min_size = Vector2( 58, 40 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.458824, 0.54902, 0.721569, 1 )
text = "0"
align = 2
valign = 1

[node name="ClockTimer" parent="CenterContainer/MarginContainer/Countdown" instance=ExtResource( 6 )]

[node name="CoinsLossSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFXS"

[node name="WrongRecipeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFXS"

[node name="SlideTimer" type="Timer" parent="."]
one_shot = true

[node name="NewOrderTimer" type="Timer" parent="."]
one_shot = true

[node name="LimitTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wrong_recipe = SubResource( 4 )
[connection signal="timeout" from="SlideTimer" to="." method="_on_SlideTimer_timeout"]
[connection signal="timeout" from="NewOrderTimer" to="." method="_on_NewOrderTimer_timeout"]
[connection signal="timeout" from="LimitTimer" to="." method="_on_LimitTimer_timeout"]
